objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Callcenter</fullName>
        </values>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>Follow-up</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AGB_anfordern_Link_MC__c</fullName>
        <formula>$Label.SiteRoot + '/ConfirmTOS?token=' + Token__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AGB anfordern Link_MC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AGBanfordernLink__c</fullName>
        <formula>HYPERLINK($Label.SiteRoot + '/ConfirmTOS?token=' + Token__c,'Link AGB anfordern','_blank')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AGB anfordern Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Absagegrund__c</fullName>
        <label>Absagegrund</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nicht im Zeitraum</fullName>
                </value>
                <value>
                    <fullName>Kunde möchte nicht wegen Preis</fullName>
                </value>
                <value>
                    <fullName>Kunde will nicht</fullName>
                </value>
                <value>
                    <fullName>Widerruf nicht angreifbar</fullName>
                </value>
                <value>
                    <fullName>Potential zu gering</fullName>
                </value>
                <value>
                    <fullName>Kein wirtschaftliches Potential</fullName>
                </value>
                <value>
                    <fullName>Dokumente nicht geschickt</fullName>
                </value>
                <value>
                    <fullName>Kunde hat widerrufen</fullName>
                </value>
                <value>
                    <fullName>Auto verkauft</fullName>
                </value>
                <value>
                    <fullName>Fahrzeug nicht betroffen</fullName>
                </value>
                <value>
                    <fullName>Kunde nicht Käufer</fullName>
                </value>
                <value>
                    <fullName>Kunde nicht erreichbar</fullName>
                </value>
                <value>
                    <fullName>Kunde verstorben</fullName>
                </value>
                <value>
                    <fullName>Kunde hat keine RSV</fullName>
                </value>
                <value>
                    <fullName>Leasing Vertrag</fullName>
                </value>
                <value>
                    <fullName>Keine Widerrufsbelehrung</fullName>
                </value>
                <value>
                    <fullName>BMW EZ nach 01.06.2014</fullName>
                </value>
                <value>
                    <fullName>Darlehensvertrag älter als 2 Jahre</fullName>
                </value>
                <value>
                    <fullName>Nutzungsanteil zu gering</fullName>
                </value>
                <value>
                    <fullName>Kapital zu gering</fullName>
                </value>
                <value>
                    <fullName>Österreich/Schweiz kleiner Motor</fullName>
                </value>
                <value>
                    <fullName>Umrüstung erfolgt</fullName>
                </value>
                <value>
                    <fullName>Mfk nicht bestätigt</fullName>
                </value>
                <value>
                    <fullName>Effektiver Jahreszins 0,00%</fullName>
                </value>
                <value>
                    <fullName>Sonstige Gründe</fullName>
                </value>
                <value>
                    <fullName>Sonstige Gründe (ohne Mail)</fullName>
                </value>
                <value>
                    <fullName>Aussortiert</fullName>
                </value>
                <value>
                    <fullName>Absage wegen Kenntnis</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Abschluss_zwischen_1991_2007__c</fullName>
        <label>Abschluss zwischen 1991 und 2007</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Abschluss_zwischen_1991_und_2007</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Used to link to VH24 or VR24 account</description>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>VH24 or VR24</description>
        <inlineHelpText>VH24 oder VR24</inlineHelpText>
        <label>Unternehmen</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Account.Name</field>
                <operation>equals</operation>
                <value>VH24</value>
            </filterItems>
            <filterItems>
                <field>Account.Name</field>
                <operation>equals</operation>
                <value>VR24</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Account Name)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AdWords_Campaign__c</fullName>
        <label>AdWords Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdWords_Content__c</fullName>
        <label>AdWords Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdWords_Medium__c</fullName>
        <label>AdWords Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdWords_Source__c</fullName>
        <label>AdWords Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdWords_Term__c</fullName>
        <label>AdWords Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advance_Payment__c</fullName>
        <label>Anzahlung</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Already_Informed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bereits informiert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assignment_Type__c</fullName>
        <label>Auftragstyp</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RSV</fullName>
                </value>
                <value>
                    <fullName>Share</fullName>
                </value>
                <value>
                    <fullName>Direkt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auto_Follow_up_Date__c</fullName>
        <label>Nächstes Auto-Follow-up</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Automarke__c</fullName>
        <label>Automarke</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Automarke</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Availability__c</fullName>
        <label>Verfügbarkeit</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lead_Availabilities</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BIC__c</fullName>
        <label>BIC</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backoffice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Backoffice</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bankname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank__c</fullName>
        <label>Kreditinstitut</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bearbeitungsnummer__c</fullName>
        <displayFormat>BN{0}</displayFormat>
        <label>Bearbeitungsnummer</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Before_2015__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vor dem 22.09.2015 gekauft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bemerkung_LV__c</fullName>
        <label>Bemerkung</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bestandteil_betriebl_Altersvorsorge__c</fullName>
        <label>Bestandteil betriebl. Altersvorsorge</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bestandteil_betriebl_Altersvorsorge</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Birthdate_Person_2__c</fullName>
        <label>Geburtsdatum Person 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <label>Geburtsdatum</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Browser__c</fullName>
        <label>Browser</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BypassProcessBuilder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BypassProcessBuilder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Callcenter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Callcenter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Kampagne</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment_On_Loss__c</fullName>
        <label>Absagekommentar</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Unternehmen</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmed_Authorization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vollmacht bestätigt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirmed_Claim_For_Compensation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Schadensersatzanspruch bestätigt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirmed_Privacy_Statement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Datenschutzerklärung bestätigt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirmed_Terms_And_Conditions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AGB bestätigt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Mileage__c</fullName>
        <label>Aktueller Kilometerstand</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Number_5_Digit__c</fullName>
        <displayFormat>{00000}</displayFormat>
        <label>Kundennummer 5-stellig</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>Kundennummer</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Customer_Reached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kunde erreicht</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_interaction_notes__c</fullName>
        <inlineHelpText>Dieses Feld zeigt nur die Notizen des letzten Telefonats.
Für alle Notizen bitte die History besuchen.</inlineHelpText>
        <label>Kurznotiz zum Telefonat</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Commitment__c</fullName>
        <label>Datumszusage</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Diesel_Code__c</fullName>
        <description>Diesel-Code aus dem Flyer</description>
        <label>Diesel Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DIESEL1</fullName>
                </value>
                <value>
                    <fullName>DIESEL2</fullName>
                </value>
                <value>
                    <fullName>DIESEL3</fullName>
                </value>
                <value>
                    <fullName>kein Code</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Engine_Type__c</fullName>
        <label>Motortyp</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Engine_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Versicherungsende</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Installment__c</fullName>
        <label>Schlussrate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Financing_Contract_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finanzierungsvertrag aktiv</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financing_Contract_Date_Category__c</fullName>
        <label>Finanzierungsvertrag Datum</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Financing_Contract_Date_Categories</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Financing_Total_Amount__c</fullName>
        <label>Finanzierungsbetrag Gesamt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Financing_Type__c</fullName>
        <label>Finanzierungsart</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Financing_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Follow_Up_Journey_1__c</fullName>
        <label>Follow Up Journey 1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Follow_up_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Follow-up Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Follow_up_Journey_2__c</fullName>
        <label>Follow up Journey 2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Follow_up_Journey_3__c</fullName>
        <label>Follow up Journey 3</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Follow_up_Period__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Follow-up Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Form_Id__c</fullName>
        <label>Formular Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Future_Savings__c</fullName>
        <label>Zukünftige Ersparnis</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Has_Financing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Financing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Legal_Protection_Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rechtsschutzversicherung vorhanden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HerokuID__c</fullName>
        <externalId>true</externalId>
        <label>HerokuID</label>
        <length>62</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Hoehe_Finanzierungsbetrag__c</fullName>
        <label>Höhe Finanzierungsbetrag</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Hoehe_Finanzierungsbetrag</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IBAN__c</fullName>
        <label>IBAN</label>
        <length>27</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP__c</fullName>
        <label>IP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inception_Date__c</fullName>
        <label>Versicherungsbeginn</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insurance_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Insurance Lookup</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Insurance_Number__c</fullName>
        <label>Versicherungsnummer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Rate__c</fullName>
        <label>Tarifbezeichnung</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Status__c</fullName>
        <label>Versicherungsstatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>bereits gekündigt</fullName>
                </value>
                <value>
                    <fullName>regulär abgelaufen</fullName>
                </value>
                <value>
                    <fullName>beitragsfrei gestellt</fullName>
                </value>
                <value>
                    <fullName>noch aktiv</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Insurance__c</fullName>
        <label>Versicherung</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_My_Lead__c</fullName>
        <formula>$User.Id = Callcenter__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is My Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kaufdatum__c</fullName>
        <label>Kaufdatum</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Kaufdatum</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kommentar__c</fullName>
        <label>Kommentar</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Last_follow_up_task__c</fullName>
        <description>Used for the automatic follow up task creation in the AGB process (Used in apex scheduler).</description>
        <label>Last follow up task</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LeadImpID__c</fullName>
        <externalId>true</externalId>
        <label>LeadImpID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Create_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_revokes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead widerruft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Protection_Insurance_Number__c</fullName>
        <label>Rechtsschutzversicherungsnummer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Protection_Insurance__c</fullName>
        <label>Rechtsschutzversicherung</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_zum_Rueckrufformular__c</fullName>
        <formula>HYPERLINK($Label.SiteRoot + '/RueckrufFormular?token=' + Token__c,'Link zum Rückrufformular','_blank')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link zum Rückrufformular</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_zur_Abmeldung__c</fullName>
        <formula>HYPERLINK($Label.SiteRoot + '/Abmelden?token=' + Token__c,'Link zur Abmeldung','_blank')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link zur Abmeldung</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>12</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Mandating_Date__c</fullName>
        <label>Mandatierungsdatum</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mileage_On_Purchase__c</fullName>
        <label>Kilometerstand bei Kauf</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Modell__c</fullName>
        <label>Modell</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Modell</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Modifications_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Umrüstung bereits erfolgt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Site__c</fullName>
        <formula>NOT(ISBLANK(HerokuID__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Newsletter_Registered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Newsletter Angemeldet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Newsletter_Registration_Date__c</fullName>
        <label>Newsletter Anmeldedatum</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Old_Id__c</fullName>
        <externalId>true</externalId>
        <label>Old Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Old_Lead_ID__c</fullName>
        <label>Old Lead ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Financing_Type__c</fullName>
        <label>Sonstige Finanzierungsart</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owner_Is_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fahrzeughalter ist Unternehmen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Paid_Installments__c</fullName>
        <label>Bisher geleistete Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Partner_Id__c</fullName>
        <label>Partner Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <label>Partner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passed_Lead_Follow_up_Journey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Passed Lead Follow up Journey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Term__c</fullName>
        <label>Zahlweise</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Payment_Terms</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Process_Type__c</fullName>
        <label>Anspruchstyp</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Process_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Produktcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Produkt</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Families</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchase_Date_Category__c</fullName>
        <label>Kaufdatum Kategorie</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Purchase_Date_Categories</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchase_Price__c</fullName>
        <label>Kaufpreis</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Qualification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Qualifizierung</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads_Qualification</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Aktenzeichen</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer__c</fullName>
        <label>Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rendite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Type__c</fullName>
        <defaultValue>"Online"</defaultValue>
        <label>Vertriebstyp</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sales_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <formula>IF(Title = "Herr","Sehr geehrter Herr " + LastName,IF(Title = "Frau","Sehr geehrte Frau " + LastName,"Hallo " + FirstName + " " + LastName))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salutation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Email__c</fullName>
        <label>Zweite Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Second_Phone__c</fullName>
        <label>Zweites Telefon</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Start_Auto_Follow_up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Start Auto Follow-up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Task_Controller_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Task Controller 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Termination__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bereits Gekündigt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Testing_Version__c</fullName>
        <label>Testing Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <label>Web form token</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>URL_AGB_anfordern__c</fullName>
        <formula>$Label.SiteRoot + '/ConfirmTOS?token=' + Token__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URL AGB anfordern</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_Abmeldung__c</fullName>
        <formula>$Label.SiteRoot + '/Abmelden?token=' + Token__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URL Abmeldung</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_Rueckrufformular__c</fullName>
        <formula>$Label.SiteRoot + '/RueckrufFormular?token=' + Token__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URL Rückrufformular</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <label>Unique Id</label>
        <length>62</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VehicleBrandAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fahrzeughersteller</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Fahrzeughersteller</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Anfragen (Fahrzeughersteller)</relationshipLabel>
        <relationshipName>Fahrzeughersteller_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vehicle_Affected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fahrzeug betroffen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vehicle_Brand_Name__c</fullName>
        <label>Fahrzeugmarke</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Brand__c</fullName>
        <label>Fahrzeughersteller</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Identification_Number__c</fullName>
        <label>Fahrzeug Identifizierungsnummer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Type__c</fullName>
        <label>Fahrzeugtyp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Versicherung_LV_RV__c</fullName>
        <label>Versicherung (LV/RV)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Versicherungen_LV_RV</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zufriedenheit_Renditenentwicklung__c</fullName>
        <label>Zufriedenheit Renditenentwicklung</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Zufriedenheit_Renditenentwicklung</valueSetName>
        </valueSet>
    </fields>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>lessThan</operation>
            <value>6/1/2019 12:00 AM</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>Meine_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>Insurance__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Inception_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_My_Lead__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>Import</value>
        </filters>
        <label>Meine Leads</label>
        <sharedTo>
            <roleAndSubordinates>Callcenter</roleAndSubordinates>
        </sharedTo>
    </listViews>
</CustomObject>